# project-management-system

./: README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
config/: settings.py  urls.py
kanbans/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
kanbans/migrations/: 0001_initial.py  0002_alter_column_team.py
teams/: models.py  serializers.py  urls.py  views.py
teams/migrations/: 0001_initial.py  0002_alter_team_name.py
tickets/: admin.py  models.py  serializers.py  urls.py  views.py
tickets/migrations/: 0001_initial.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py
